# minimalpy

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  dependabot-auto-merge.yml  docs.yml  int.yml  publish.yml  style.yml  unit.yml
.s2i/: environment
data/: data.json
deploy/: app.sh
deploy/test/: docker-compose.yml  run_test.py
docs/: Makefile  conf.py  index.rst
minimalpy/: __init__.py  server.py
tests/: coveralls.py  requirements.txt  test_server.py
