[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimalpy"
dynamic = ["version"]
description = "minimalpy"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "blankdots", email = "blankdots@gmail.com" },
]
keywords = [
    "development",
    "setuptools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "aiohttp==3.10.1",
    "gunicorn==22.0.0",
    "uvloop==0.19.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
test = [
    "coverage==7.6.0",
    "coveralls",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "pytest==8.3.2",
    "tox==4.16.0",
]

[project.scripts]
minimal = "minimalpy.server:main"

[project.urls]
Homepage = "https://github.com/blankdots/minimalpy"
Source = "https://github.com/blankdots/minimalpy/"

[tool.hatch.version]
path = "minimalpy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/minimalpy",
]

[tool.black]
line-length = 160
target-version = ['py311']
