[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimalpy"
dynamic = ["version"]
description = "minimalpy"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "blankdots", email = "blankdots@gmail.com" },
]
keywords = [
    "development",
    "setuptools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "aiohttp==3.13.5",
    "gunicorn==25.3.0",
    "uvloop==0.22.1",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
test = [
    "coverage==7.13.5",
    "coveralls",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "pytest==9.0.3",
    "tox==4.53.0",
]

[project.scripts]
minimal = "minimalpy.server:main"

[project.urls]
Homepage = "https://github.com/blankdots/minimalpy"
Source = "https://github.com/blankdots/minimalpy/"

[tool.hatch.version]
path = "minimalpy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/minimalpy",
]

[tool.black]
line-length = 160
target-version = ['py311']
